--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,8 +1,10 @@
-extends base.pug
-
+extends base
+include mixins/video
 
 
 block content 
-    h1 Home!
-    input(placeholder = "What's your name?")
-    button send
+    h2 Welcome here. You will see the trending videos.
+    each potato in videos   
+        +video(potato)
+    else 
+        li Sorry. Nothing Found.
