--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,7 +2,9 @@ extends base.pug
 
 
 block content 
-    h1=video.title
-    const view = video.views
-    h3 #{video.views} #{video.views === 1 ? "view":"views"}
+    div
+        p=video.description
+        small=video.createdAt
     a(href=`${video.id}/edit`) Edit Video &rarr;
+    br
+    a(href=`${video.id}/delete`) Delete Video &rarr;
