--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,8 +1,10 @@
 extends base.pug
 
 block content 
-    h4 Change TItle of Video 
+    h4 Update Video 
 
     form(method="POST")
         input(name = "title", placeholder="Video Title", value=video.title, required)
+        input(name = "description", placeholder="Description", value = video.description, required, type="text", maxlength=140)
+        input(name = "hashtags", placeholder="Hashtags, separated by comma.", value = video.hashtags.join(), required, type="text")
         input(value="save", type="submit") 
